--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,11 @@
 [pytest]
-# command line
+# command line pytest --alluredir report  allure generate report -o html
 addopts = -s
 # search dir
 testpaths = ./Scripts
 # search file
-pytest_files = test_search.py
+python_files = test_step.py
 # search class
-pytest_classes = Test*
+python_classes = Test*
 # search function
-pytest_functions = test*
+python_functions = test*
