--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@ addopts = -s
 # search dir
 testpaths = ./Scripts
 # search file
-python_files = test_step.py
+python_files = test_search.py
 # search class
 python_classes = Test*
 # search function
